# rclone-find-download-delete-json-files

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/rclone_cleanup_json_files/: __init__.py  app.py  rclone_service.py  screens.py
src/rclone_json_tui/: __init__.py  app.py  screens.py
tests/: __init__.py  test_rclone_service.py
