[project]
name = "rclone-cleanup-json-files"
version = "0.1.0"
description = "Find, download and delete JSON files from cloud drives"
authors = [
    { name = "Rich Lewis - GitHub: @RichLewis007" }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "textual>=1.0.0",
    "textual-fspicker>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "ruff>=0.1",
]

[project.scripts]
rclone-cleanup-json-files = "rclone_cleanup_json_files.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel.sources]
"src" = ""

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = []

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
